added some functions on js

--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
             <a href=""><img src="img/Logo.png" alt=""></a>
             <h1 class="ms-2 fs-1">Campo Minato</h1>
         </div>
-        <div class="toolbar d-flex align-items-center">
+        <div class="toolbar d-flex ml-2 align-items-center">
+            <label for="level">Difficoltà</label>
+            <select name="level" id="level">
+                <option value="1">Facile</option>
+                <option value="2">Medio</option>
+                <option value="3">Difficile</option>
+            </select>
             <button type="button" id="play-btn" class="btn btn-light bt-lg">Play</button>
         </div>
     </header>
